--- a/src/dragon/config/rules.yml
+++ b/src/dragon/config/rules.yml
@@ -77,3 +77,7 @@ stage:
   name: "Staging Commands"
   desc: "Running Stage for $name"
   cmd: "$stage && $stage2"
+strip:
+  name: "Strip"
+  desc: "Stripping $name"
+  cmd: "$strip $stripflags $in"
